--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ nav{
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 0 10px 0px rgba(0,0,0,0.1);
-  z-index: 3;
+  z-index: 2;
 }
 
 .nav-links ul li a{
@@ -31,7 +31,7 @@ nav{
   background: #fff;
   height: 100px;
   width: 100%;
-  margin-top: 9%;
+  margin-top: 35%;
   top: -200;
   left: 50%;
   transform: translateX(-50%);
@@ -48,9 +48,27 @@ nav{
   margin: auto;
   transition: 0.5s;
   background: #fff;
-  z-index: -2;
 }
 
 nav .icons{
   display: none;
+}
+
+.btn{
+  display: inline-block;
+  border: 1px solid #b80c1c;
+  color: #fff !important;
+  padding: 12px 26px;
+  font-size: 13px;
+  cursor: pointer;
+  background: #b80c1c;
+  position: relative;
+  transition: 0.5s;
+}
+
+.btn:hover{
+  transition: 1s;
+  border: 1px solid #b80c1c;
+  color: #000 !important;
+  background-color: transparent;
 }
