--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 *{
   font-family: "Open Sans", sans-serif;
@@ -107,81 +105,4 @@ nav{
   border-bottom: 2px solid #b70c1c;
 }
 
-@media (min-width:1440px){
-  
-=======
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-*{
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-nav{
-  display: flex;
-  padding: 2% 6%;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0 0 10px 0px rgba(0,0,0,0.1);
-  z-index: 2;
-}
-
-.nav-links ul li a{
-  color: #000;
-  text-decoration: none;
-  font-size: 15px;
-  font-weight: 600;
-}
-
-.nav-links ul li{
-    display: block;
-}
-
-.nav-links {
-  position: fixed;
-  background: #fff;
-  height: 100px;
-  width: 100%;
-  margin-top: 35%;
-  top: -200;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  transition: 1.5s;
-}
-
-.nav-links ul li::after{
-  content: '';
-  width: 0%;
-  height: 3px;
-  background: rgba(119, 47, 47, 0.4);
-  display: block;
-  margin: auto;
-  transition: 0.5s;
-  background: #fff;
-}
-
-nav .icons{
-  display: none;
-}
-
-.btn{
-  display: inline-block;
-  border: 1px solid #b80c1c;
-  color: #fff !important;
-  padding: 12px 26px;
-  font-size: 13px;
-  cursor: pointer;
-  background: #b80c1c;
-  position: relative;
-  transition: 0.5s;
-}
-
-.btn:hover{
-  transition: 1s;
-  border: 1px solid #b80c1c;
-  color: #000 !important;
-  background-color: transparent;
->>>>>>> 28b3400f5d063a2b320cf4d7805ac9a49248687c
-}
+@media (min-width:1440px){}
