--- a/style.css
+++ b/style.css
@@ -105,4 +105,66 @@ nav{
   border-bottom: 2px solid #b70c1c;
 }
 
+.menu-foods{
+  margin: auto;
+}
+
+.location .card.mx-auto.mb-3 {
+  border: 2px solid #b70c1c;
+}
+
+.story{
+  background: #fceeee;
+  padding: 5% 0;
+}
+
+.all{
+  display: block;
+  text-align: center;
+}
+
+.con{
+  padding: auto;
+  background: #b70c1c;
+}
+
+.contact-mail {
+  text-align: center;
+  position: relative;
+}
+
+.contact-mail .icon {
+  width: 30px;
+  padding-right: 10px;
+}
+
+#contact-us .contact-mail a{
+  font-weight: 600;
+  font-size: 20px;
+  color: #b70c1c;
+    text-decoration: none;
+    color: #b70c1c;
+}
+
+.contact-mail .mail-text::before {
+  content: "";
+  background: #b70c1c;
+  height: 2px;
+  width: 32%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+}
+
+.contact-mail .mail-text::after {
+  content: "";
+  background: #b70c1c;
+  height: 2px;
+  width: 32%;
+  position: absolute;
+  right: 0;
+  top: 50%;
+}
+
 @media (min-width:1440px){}
+
